--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         }
     ],
     "require": {
-        "php": "~5.6.5 || ^7.0",
+        "php": "~5.6.5 || ^7.0 || ^8.0",
         "myparcelnl/sdk": "~5.2.1",
         "magento/product-community-edition": "~2.3.6 || ~2.4.0"
     },
